modificato un pò il css ed aggiunte classi tramite js

--- a/inedex.html
+++ b/inedex.html
@@ -12,7 +12,7 @@
         <h1>FizzBuzzDOM</h1>
 
     
-        <ul id="list"></ul>
+        <ul id="list" class="col-8"></ul>
     
     </main>
     <script src="app.js"></script>
